--- a/Week 1_dannys_diner/week1.ipynb
+++ b/Week 1_dannys_diner/week1.ipynb
@@ -1,40 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done!\n"
-     ]
-    }
-   ],
-   "source": [
-    "%load_ext isqlite3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done!\n"
-     ]
-    }
-   ],
-   "source": [
-    "%sql_open "
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -61,7 +27,44 @@
     "\n",
     "9.If each $1 spent equates to 10 points and sushi has a 2x points multiplier - how many points would each customer have?\n",
     "\n",
-    "10.In the first week after a customer joins the program (including their join date) they earn 2x points on all items, not just sushi - how many points do customer A and B have at the end of January"
+    "10.In the first week after a customer joins the program (including their join date) they earn 2x points on all items, not just sushi - how many points do customer A and B have at the end of January\n",
+    "\n",
+    "![](database.svg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The isqlite3 extension is already loaded. To reload it, use:\n",
+      "  %reload_ext isqlite3\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext isqlite3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "%sql_open 1_dannys_diner.db"
    ]
   },
   {
@@ -74,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +89,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +126,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +162,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,19 +187,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table><thead><tr><th style=\"text-align: left\">product_name</th><th style=\"text-align: left\">count(product_name)</th></tr></thead><tbody></tbody></table>"
+       "<table><thead><tr><th style=\"text-align: left\">product_name</th><th style=\"text-align: left\">count(product_name)</th></tr></thead><tbody><tr><td style=\"text-align: left\">sushi</td><td style=\"text-align: right\">15</td></tr><tr><td style=\"text-align: left\">curry</td><td style=\"text-align: right\">15</td></tr><tr><td style=\"text-align: left\">ramen</td><td style=\"text-align: right\">15</td></tr></tbody></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,15 +207,9 @@
    "source": [
     "%%sql\n",
     "\n",
-    "SELECT product_name, count(product_name)\n",
+    "SELECT product_name, count(product_name),c\n",
     "FROM menu m JOIN sales s\n",
-    "GROUP BY m.product_id\n",
-    "HAVING m.price = (\n",
-    "    SELECT SUM(price)\n",
-    "    FROM menu m JOIN sales sales\n",
-    "    GROUP BY m.product_id\n",
-    "    LIMIT 1\n",
-    ")"
+    "GROUP BY m.product_id\n"
    ]
   },
   {
