--- a/Week 1_dannys_diner/week1.ipynb
+++ b/Week 1_dannys_diner/week1.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "10.In the first week after a customer joins the program (including their join date) they earn 2x points on all items, not just sushi - how many points do customer A and B have at the end of January\n",
     "\n",
-    "![](database.svg)"
+    "![](database.png)"
    ]
   },
   {
@@ -187,29 +187,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<table><thead><tr><th style=\"text-align: left\">product_name</th><th style=\"text-align: left\">count(product_name)</th></tr></thead><tbody><tr><td style=\"text-align: left\">sushi</td><td style=\"text-align: right\">15</td></tr><tr><td style=\"text-align: left\">curry</td><td style=\"text-align: right\">15</td></tr><tr><td style=\"text-align: left\">ramen</td><td style=\"text-align: right\">15</td></tr></tbody></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mError: near \"from\": syntax error\u001b[0m\n"
+     ]
     }
    ],
    "source": [
     "%%sql\n",
     "\n",
-    "SELECT product_name, count(product_name),c\n",
+    "SELECT customer_id, product_name, count(product_name) AS times_purchased\n",
     "FROM menu m JOIN sales s\n",
-    "GROUP BY m.product_id\n"
+    "GROUP BY customer_id\n",
+    "HAVING times_purchased = (SELECT max(count(product_name) from sales sa J))\n"
    ]
   },
   {
