--- a/Week 1_dannys_diner/week1.ipynb
+++ b/Week 1_dannys_diner/week1.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,19 +114,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table><thead><tr><th style=\"text-align: left\">customer_id</th><th style=\"text-align: left\">Total_days</th></tr></thead><tbody><tr><td style=\"text-align: left\">A</td><td style=\"text-align: right\">6</td></tr><tr><td style=\"text-align: left\">B</td><td style=\"text-align: right\">6</td></tr><tr><td style=\"text-align: left\">C</td><td style=\"text-align: right\">3</td></tr></tbody></table>"
+       "<table><thead><tr><th style=\"text-align: left\">customer_id</th><th style=\"text-align: left\">Total_days</th></tr></thead><tbody><tr><td style=\"text-align: left\">A</td><td style=\"text-align: right\">4</td></tr><tr><td style=\"text-align: left\">B</td><td style=\"text-align: right\">6</td></tr><tr><td style=\"text-align: left\">C</td><td style=\"text-align: right\">2</td></tr></tbody></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
    "source": [
     "%%sql\n",
     "\n",
-    "SELECT customer_id, COUNT(order_date) AS  Total_days\n",
+    "SELECT customer_id, COUNT(DISTINCT(order_date)) AS  Total_days\n",
     "FROM sales\n",
     "GROUP BY customer_id\n",
     "ORDER BY customer_id"
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,24 +187,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mError: near \"from\": syntax error\u001b[0m\n"
-     ]
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th style=\"text-align: left\">product_name</th><th style=\"text-align: left\">times_purchased</th></tr></thead><tbody><tr><td style=\"text-align: left\">ramen</td><td style=\"text-align: right\">8</td></tr></tbody></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
     "\n",
-    "SELECT customer_id, product_name, count(product_name) AS times_purchased\n",
-    "FROM menu m JOIN sales s\n",
-    "GROUP BY customer_id\n",
-    "HAVING times_purchased = (SELECT max(count(product_name) from sales sa J))\n"
+    "SELECT product_name, count(*) as times_purchased\n",
+    "FROM sales s join menu m\n",
+    "ON s.product_id = m.product_id\n",
+    "GROUP BY product_name\n",
+    "ORDER BY times_purchased DESC\n",
+    "LIMIT 1"
    ]
   },
   {
