--- a/Week 1_dannys_diner/week1.ipynb
+++ b/Week 1_dannys_diner/week1.ipynb
@@ -77,8 +77,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 78,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -89,7 +93,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,8 +118,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "execution_count": 79,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -126,7 +134,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,8 +158,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 80,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -162,7 +174,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,8 +199,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
+   "execution_count": 81,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -199,7 +215,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,13 +230,6 @@
     "ORDER BY times_purchased DESC\n",
     "LIMIT 1"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
