--- a/Week 1_dannys_diner/week1.ipynb
+++ b/Week 1_dannys_diner/week1.ipynb
@@ -34,15 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The isqlite3 extension is already loaded. To reload it, use:\n",
-      "  %reload_ext isqlite3\n"
+      "Done!\n"
      ]
     }
    ],
@@ -52,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -215,7 +214,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
