--- a/project files/Week 1_dannys_diner/week1.ipynb
+++ b/project files/Week 1_dannys_diner/week1.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -92,7 +92,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -133,7 +133,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -173,7 +173,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,12 +193,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4.What is the most purchased item on the menu and how many times was it purchased by all customers?\n"
+    "4. What is the most purchased item on the menu and how many times was it purchased by all customers?\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -214,7 +214,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,6 +228,46 @@
     "GROUP BY product_name\n",
     "ORDER BY times_purchased DESC\n",
     "LIMIT 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Which item was the most popular for each customer?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th style=\"text-align: left\">customer_id</th><th style=\"text-align: left\">product_name</th><th style=\"text-align: left\">times_purchased</th></tr></thead><tbody><tr><td style=\"text-align: left\">B</td><td style=\"text-align: left\">curry</td><td style=\"text-align: right\">6</td></tr><tr><td style=\"text-align: left\">A</td><td style=\"text-align: left\">sushi</td><td style=\"text-align: right\">6</td></tr><tr><td style=\"text-align: left\">C</td><td style=\"text-align: left\">ramen</td><td style=\"text-align: right\">3</td></tr></tbody></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "SELECT s.customer_id, product_name, COUNT(*) AS times_purchased\n",
+    "FROM sales s join menu m\n",
+    "ON s.product_id = m.product_id\n",
+    "GROUP BY customer_id\n",
+    "ORDER BY times_purchased DESC"
    ]
   }
  ],
@@ -247,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
