--- a/project files/Week 1_dannys_diner/week1.ipynb
+++ b/project files/Week 1_dannys_diner/week1.ipynb
@@ -1,9 +1,19 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8d325719-c0f2-4bd2-84dd-8416ba196f3a",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "# Case Study Questions\n",
     "\n",
@@ -34,69 +44,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done!\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7f44cb51-12e0-4745-9f1a-24e7295b78b0",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "%load_ext isqlite3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done!\n"
-     ]
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "45fc9978-f8ea-45f9-ae8a-8b83ed0640cd",
+     "showTitle": false,
+     "title": ""
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "%sql_open 1_dannys_diner.db"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "72ee69c1-1e16-4235-983c-74de4a9c04c7",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "1.What is the total amount each customer spent at the restaurant?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7afddc9f-ef66-447f-9a10-65c88b572e58",
+     "showTitle": false,
+     "title": ""
+    },
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><thead><tr><th style=\"text-align: left\">customer_id</th><th style=\"text-align: left\">Total_Amount</th></tr></thead><tbody><tr><td style=\"text-align: left\">A</td><td style=\"text-align: right\">76</td></tr><tr><td style=\"text-align: left\">B</td><td style=\"text-align: right\">74</td></tr><tr><td style=\"text-align: left\">C</td><td style=\"text-align: right\">36</td></tr></tbody></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sql \n",
     "\n",
@@ -108,36 +130,42 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2386d4ec-7fcc-4c17-9436-6744d2495823",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "2.How many days has each customer visited the restaurant?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "517c2aca-610d-43bd-a7a6-d288b084e9dc",
+     "showTitle": false,
+     "title": ""
+    },
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><thead><tr><th style=\"text-align: left\">customer_id</th><th style=\"text-align: left\">Total_days</th></tr></thead><tbody><tr><td style=\"text-align: left\">A</td><td style=\"text-align: right\">4</td></tr><tr><td style=\"text-align: left\">B</td><td style=\"text-align: right\">6</td></tr><tr><td style=\"text-align: left\">C</td><td style=\"text-align: right\">2</td></tr></tbody></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sql\n",
     "\n",
@@ -148,36 +176,42 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7f231f6e-7afe-44bf-9e86-312ce3539921",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "3.What was the first item from the menu purchased by each customer?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a2b9b493-2445-4c70-b4a5-2254eb8eb2c1",
+     "showTitle": false,
+     "title": ""
+    },
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><thead><tr><th style=\"text-align: left\">customer_id</th><th style=\"text-align: left\">product_name</th></tr></thead><tbody><tr><td style=\"text-align: left\">A</td><td style=\"text-align: left\">sushi</td></tr><tr><td style=\"text-align: left\">B</td><td style=\"text-align: left\">curry</td></tr><tr><td style=\"text-align: left\">C</td><td style=\"text-align: left\">ramen</td></tr></tbody></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sql\n",
     "\n",
@@ -189,36 +223,42 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "cf467f6a-b1ad-4ac8-b476-a752634ecf49",
+     "showTitle": false,
+     "title": ""
+    }
+   },
    "source": [
     "4.What is the most purchased item on the menu and how many times was it purchased by all customers?\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 0,
    "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "556faa3c-c70c-44f5-9584-a6860678465e",
+     "showTitle": false,
+     "title": ""
+    },
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><thead><tr><th style=\"text-align: left\">product_name</th><th style=\"text-align: left\">times_purchased</th></tr></thead><tbody><tr><td style=\"text-align: left\">ramen</td><td style=\"text-align: right\">8</td></tr></tbody></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sql\n",
     "\n",
@@ -232,6 +272,15 @@
   }
  ],
  "metadata": {
+  "application/vnd.databricks.v1+notebook": {
+   "dashboards": [],
+   "language": "python",
+   "notebookMetadata": {
+    "pythonIndentUnit": 4
+   },
+   "notebookName": "week1",
+   "widgets": {}
+  },
   "kernelspec": {
    "display_name": "base",
    "language": "python",
@@ -257,5 +306,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
